# blog

./: .babelrc  .bazelignore  .bazelrc  .eleventy.js  .gitattributes  .gitignore  .lighthouserc.json  .prettierignore  .prettierrc  AGENTS.md  BUILD.bazel  GEMINI.md  LICENSE  MODULE.bazel  README.md  archives.html  authors.html  categories.html  gatsby-browser.js  gatsby-config.js  gatsby-node.js  index2.html  index3.html  jules-clean.sh  my-first-review-1.html  my-first-review-2.html  my-first-review-3.html  my-first-review-4.html  my-first-review.html  netlify.toml  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tags.html  tailwind.config.js  test_output.html  tsconfig.base.json  (+3 more)
.Jules/: bolt.md  forge.md  palette.md  (+1 more)
apps/site/: .biomeignore  AGENTS.md  BUILD.bazel  GEMINI.md  biome.json  check_lucide.js  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
apps/site/scripts/: generate-snippets.ts
apps/site/src/: app.css  app.d.ts  app.html
apps/site/src/content/: AGENTS.md  GEMINI.md
apps/site/src/content/posts/: 2022-behind-the-rocks-50k.md  2022-cocodona-250-aid-drop-bags.md  2022-creede-100-race-report.md  2022-maces-hideout-100m.md  2022-moab-240-race-report.md  2022-mogollon-monster-planning-splits.md  2022-mogollon-monster-race-report.md  2022-sedona-red-rocks-stage-race-ultra.md  2024-google-next-talk-rust-python-apps-script.md  2024-workspace-developer-summits.md  2026-crazy-mountain-100.md  a-race-win-was-stolen-from-me.md  a-week-after-running-an-ultramarathon.md  abandon-git-lfs-because-agents.md  agent-identity-git-commits.md  apps-script-advanced-services-reference.md  apps-script-async-await.md  apps-script-center-table.md  apps-script-checkbox-lists.md  apps-script-currentonly-scopes.md  apps-script-delegated-mailbox.md  apps-script-document-comments.md  apps-script-docx-documentapp.md  apps-script-drive-file-get-blob.md  apps-script-firestore.md  apps-script-free-busy.md  apps-script-gcp-region-latency.md  apps-script-gemini-pro-text.md  apps-script-gmail-inline-images.md  apps-script-google-script-run-vs-get-post.md  apps-script-key-value-stores.md  apps-script-memoization.md  apps-script-merge-table-cells.md  apps-script-move-files.md  apps-script-postgresql.md  apps-script-runtime-limitations-wintercg.md  apps-script-service-account-impersonation.md  apps-script-table-of-contents.md  apps-script-vertex-ai.md  apps-script-wasm.md  (+75 more)
apps/site/src/content/posts/snippets/: benchmark-parallelism.gs  fetch-with-retry.gs  free-gmail-sheets-mail-merge-script  jules-git-lfs-setup-environment.sh  manage-cookies.gs
apps/site/src/content/posts/snippets/apps-script-async-await/: example-1.sh  example.js  example.sh  main-1.js  main-2.js  main-3.js  main.js
apps/site/src/content/posts/snippets/apps-script-center-table/: center-table.js  complete-example.js  fixed-width.js
apps/site/src/content/posts/snippets/apps-script-checkbox-lists/: create-checkbox-list.js  todo-example.js  toggle-checkbox.js
apps/site/src/lib/: ads.svelte.ts  analytics.ts  constants.ts  content.ts  images.ts  maps.ts  race-urls.ts  races.server.ts  races.ts  rehype-in-article-ad.js  rehype-in-article-ad.ts  rss.ts  social-icons.ts  types.ts  util.ts  utils.ts  validate-race-urls.ts
apps/site/src/lib/components/: ActionLink.svelte  ActivityList.svelte  ActivityListItem.svelte  AdProvider.svelte  AscentProgress.svelte  BrandIcon.svelte  ChartLegendItem.svelte  CodeToolbar.svelte  DateDisplay.svelte  EliteSpotlightCard.svelte  ExpandButton.svelte  ExternalLink.svelte  FormattedDate.svelte  Head.svelte  HotWaitlistsCard.svelte  InitialsAvatar.svelte  JsonLd.svelte  Metric.svelte  MetricBadge.svelte  MobileMenuIcon.svelte  MyNextRaceCard.svelte  NavLink.svelte  Navbar.svelte  PostCard.svelte  PostList.svelte  PostListItem.svelte  PostTagCloud.svelte  ProgressBar.svelte  RaceStatsBanner.svelte  RunningChart.svelte  Search.svelte  SectionHeading.svelte  SectionHeadline.svelte  Separator.svelte  SocialLink.svelte  Sparkline.svelte  StravaActivityHeatmap.svelte  StravaBadge.svelte  StravaEmbed.svelte  StravaLink.svelte  (+10 more)
apps/site/src/lib/components/atoms/: NavLink.svelte
apps/site/src/lib/components/content/: GoogleDisclaimer.svelte  Image.svelte  Note.svelte  Snippet.svelte  SnippetMerged.svelte  Strava.svelte  Tldr.svelte
apps/site/src/lib/components/race/: FieldAnalysisPeers.svelte  FieldStrengthCard.svelte  RaceHeroSection.svelte  RaceYearNav.svelte  RankResultsScatter.svelte  RankingsMethodology.svelte  WaitlistStatsCard.svelte  index.ts  types.ts
apps/site/src/lib/content/: posts.server.ts  posts.shared.ts  posts.ts  strava.ts
apps/site/src/lib/data/: snippets.json
apps/site/src/lib/server/: rehypeGraphvizWasm.ts  remark-snippet.js  remark-snippet.ts  snippet-generator.ts  utils.ts
apps/site/src/lib/utils/: slugify.ts  youtube.ts
apps/site/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
apps/site/src/routes/(meta)/llms.txt/: +server.ts
apps/site/src/routes/(meta)/sitemap.xml/: +server.ts
apps/site/src/routes/404/: +page.svelte
apps/site/src/routes/about/: +page.svelte
apps/site/src/routes/activities/: +page.server.ts  +page.svelte
apps/site/src/routes/posts/: +page.server.ts  +page.svelte
apps/site/src/routes/posts.json/: +server.ts
apps/site/src/routes/posts/[id]/: +page.server.ts  +page.svelte  +page.ts
apps/site/src/routes/posts/[id].[ext]/: +server.ts
apps/site/src/routes/posts/[id].md/: +server.ts
apps/site/src/routes/segments/: +page.server.ts  +page.svelte
apps/site/src/routes/segments/[id]/: +page.server.ts  +page.svelte
apps/site/src/routes/snippets/: +page.svelte
apps/site/src/routes/tags/: +page.server.ts  +page.svelte
apps/site/src/routes/tags/[tag]/: +page.server.ts  +page.svelte
apps/site/src/routes/ultras/races/: +layout.server.ts  +page.server.ts
apps/site/src/types/: d3-scale-chromatic.d.ts
apps/site/static/: manifest.json  robots.txt
apps/site/static/.well-known/: atproto-did
(+5278 files in other folders)
