load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

# All source files for the SvelteKit app
_SRCS = glob(
    [
        "src/**",
        "static/**",
        "*.ts",
        "*.js",
        "*.json",
    ],
    exclude = [
        "node_modules/**",
        "build/**",
        ".svelte-kit/**",
        "BUILD.bazel",
    ],
)

# ─── Build (vite build → static output) ─────────────────────────────────────
# SvelteKit/Vite have complex peer dependency chains that don't resolve in
# Bazel's sandboxed npm layout. We use genrule+local to run with the real
# pnpm node_modules. Workspace deps are built locally first so their dist/
# directories exist for node module resolution via pnpm workspace symlinks.

genrule(
    name = "build",
    srcs = _SRCS,
    outs = ["build_output.tar"],
    cmd = """
        pnpm --filter @jpoehnelt/matter run build && \
        pnpm --filter @jpoehnelt/remark-snippet run build && \
        pnpm --filter @jpoehnelt/ultrasignup-scraper run build && \
        cd apps/site && \
        npx svelte-kit sync && \
        npx vite build && \
        tar -cf ../../$@ build/
    """,
    local = True,
)

# ─── Check (svelte-check) ───────────────────────────────────────────────────

genrule(
    name = "check",
    srcs = _SRCS,
    outs = ["check_result.txt"],
    cmd = """
        pnpm --filter @jpoehnelt/matter run build && \
        pnpm --filter @jpoehnelt/remark-snippet run build && \
        pnpm --filter @jpoehnelt/ultrasignup-scraper run build && \
        cd apps/site && \
        npx svelte-kit sync && \
        npx svelte-check --tsconfig ./tsconfig.json && \
        echo "OK" > ../../$@
    """,
    local = True,
)

# ─── Dev server ──────────────────────────────────────────────────────────────
# Use `pnpm --filter site dev` directly for the dev server.
# Interactive processes don't benefit from Bazel's build graph.
